--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Publisher which pulls data from a Naveego's Legacy Golden Record service",
   "apiVersion": "2",
   "versionDescription": "Version 2",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "iconFile": "icon.jpg",
   "executable": "Plugin-Naveego-Legacy",
   "kind": "publisher",
@@ -24,7 +24,8 @@
         "OAuthClientId",
         "OAuthClientSecret",
         "Username",
-        "Password"
+        "Password",
+        "DecimalsThatAreNotReallyNullable"
       ],
       "Password": {
         "ui:widget": "password"
@@ -55,6 +56,11 @@
           "type": "string",
           "title": "Password",
           "description": "The password to use for authentication"
+        }, 
+        "DecimalsThatAreNotReallyNullable": {
+          "type": "string",
+          "title": "Non Nullable Decimal fields",
+          "description": "Decimals that we think are null, but they aren't.  Separate multiple with a comma."
         }
       },
       "required": [
