improved value conversion safety on reads

--- a/Plugin-Naveego-Legacy.Test/Plugin-Naveego-Legacy.Test.csproj
+++ b/Plugin-Naveego-Legacy.Test/Plugin-Naveego-Legacy.Test.csproj
@@ -5,6 +5,8 @@
         <RootNamespace>Plugin_Naveego_Legacy</RootNamespace>
 
         <IsPackable>false</IsPackable>
+
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
